--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
     margin:0;
     font-family: Arial, sans-serif;
     box-sizing: border-box;
-/**}
+}
 body{
-    background-color: blue;
+    background-color: rgb(162, 200, 200);
 } */
 
 .container{
@@ -16,12 +16,37 @@ body{
     max-width: 200em;
     font-size:  15px;
     padding:2em;
+    display: flex;
+    justify-content: center;
     /*position:absolute; 
     transform: translate(-50% -50%);
     top:50%;
-    left:50%;
+    left:50%;*/
 
-}*/
+}
+
+.letter-input-sec{
+    display: flex;
+    justify-content: center;
+    font-size: 2em;
+    margin: 0.5em 0 1em  0;
+}
+
+.lives{
+
+    
+
+}
+
+.new-game-button{
+    font-size: 1.3em;
+    background-color: bisque;
+    border: black;
+    padding: 0.5em 1em;
+    cursor: pointer;
+    color: rgb(69, 215, 139);
+
+}
 
 
   
