--- a/style.css
+++ b/style.css
@@ -1,23 +1,25 @@
 *{
     padding: 0;
-    margin:0;
+    margin: 0;
     font-family: Arial, sans-serif;
     box-sizing: border-box;
     margin:10px ;
 }
+
 body{
-    background-color: rgb(162, 200, 200);
-    padding: 0;
-    margin:0;
+    background-color: rgb(117, 132, 117);
+    padding:0;
+    margin: 0;
+    margin-right:300px;
     font-family: Arial, sans-serif;
     box-sizing: border-box;
-   /* margin:10px ;*/
     text-align: center;
 
 } 
 
 .container{
     margin-top: 20px;
+     
     background-color: silver;
     border:solid burlywood ;
     width: 90vw;
@@ -27,7 +29,8 @@ body{
     padding:2em;
     display: flex;
     justify-content: center;
-    margin: 10px;
+    margin-right: 10px;
+    
 
 }
 
@@ -39,40 +42,20 @@ body{
     justify-content: center;
     font-size: 2em;
     margin-bottom:  10px;
-    padding-top: 100px;
+    padding-top: 150px;
     border:solid rgb(145, 53, 20)
 
 }
 
 
 .letters{
-   
+
    margin: 20px;
 }
 
-/*#hint-div{
-border: solid black;
-margin: 10px;
 
-}
-#ath-hint-button{
-    font: size 1.3em; 
-}
-
-#hidden-notification{
-    border: solid green;
-    margin:20px;
-    width:550px;
-    height:150px; ;
     
-}
 
-#notification-span{
-    border: solid blue;
-    width:00px;
-    height: 00px;
-
-}*/
 
 button{
     font-size: 1.5em;
