--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body{
     padding:2em;
     display: flex;
     justify-content: center;
-    margin-right: 10px;
+    margin-right: 20px;
+    margin-left: 70px;
     
 
 }
