--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 body{
     background-color: rgb(117, 132, 117);
-    margin-right:300px;
+    margin-right: 40px;
     text-align: center;
 
 } 
@@ -31,12 +31,12 @@ body{
     display: flex;
     justify-content: center;
     margin-right: 20px;
-    margin-left: 70px;
+    margin-left: 60px;
 
 }
 
 /* styling of word display class */
-.word-display{
+.name-display{
 
     width: 1300px;
     height:400px;
@@ -69,6 +69,11 @@ button{
 
 }
 
+button:disabled{
+    color: orange;
+    background-color:brown ;
+   
+  }  
 
   
 
