--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body{
 
 .container{
     margin-top: 20px;
-     
     background-color: silver;
     border:solid burlywood ;
     width: 90vw;
@@ -68,12 +67,9 @@ button{
     
 
 }
-
+/* syling of disable button */
 button:disabled{
     color: orange;
     background-color:brown ;
    
   }  
-
-  
-
