--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 
 
 *{
-    padding: 0;
-    margin: 0;
+    padding:0;
     font-family: Arial, sans-serif;
     box-sizing: border-box; /* boxed with border around it */
-    margin:10px ;
+    margin: 10px;
+
 }
 
 /* stylinig of the body */
@@ -14,12 +14,14 @@ body{
     background-color: rgb(117, 132, 117);
     margin-right: 40px;
     text-align: center;
+    
+    
 
 } 
 /* styling of game container */
 
 .container{
-    margin-top: 20px;
+
     background-color: silver;
     border:solid burlywood ;
     width: 90vw;
@@ -31,12 +33,15 @@ body{
     justify-content: center;
     margin-right: 20px;
     margin-left: 60px;
+    text-align:inherit;
+    text-align-last: center;
+    
 
 }
 
-/* styling of word display class */
+/* styling ofthw class name-display  */
 .name-display{
-
+    margin-top:50px ;
     width: 1300px;
     height:400px;
     display: flex;
@@ -47,23 +52,37 @@ body{
 
 }
 
+
 /* styling of letters class */
 .letters{
-
-   margin: 20px;
+     margin: 10px;
+     margin-right: 1px;
+     align-items: center;
+     padding-top: 30px;
+     padding-right: 30px;
+     padding-left :50px; ;
+         
+    
 }
-
+/*styling number of guesses(lives) left */
+.guesses-left{
+    padding-top: 35px ;
+    color:black;
+    margin:5px;
+}
    
 /*styling of New Game button and letter buttons */
 
 button{
+
     font-size: 1.5em;
     background-color: bisque;
     border:solid black;
-    padding: 0.5em 1em;
-    padding:10px  20px; ;
+    padding: 10px  20px;
     cursor: pointer;
     color: rgb(69, 215, 139);
+    text-align: center;
+    
     
 
 }
@@ -71,5 +90,6 @@ button{
 button:disabled{
     color: orange;
     background-color:brown ;
+    
    
   }  
